[package]
name = "s3-sss"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
sss = { git = "https://github.com/layerkv/sss", tag = "v0.3" }
rusoto_s3 = "0.47.0"
rusoto_credential = "0.47.0"
rusoto_core = "0.47.0"
anyhow = "1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["io"] }
md-5 = "0.9"
base64 = "0.13"